<resources>
  <string name="app_name">Demo</string>
  <string name="login">登录</string>
  <string name="mobile">手机号码</string>
  <string name="please_input_mobile">请输入手机号</string>
  <string name="verify_code">验证码</string>
  <string name="please_input_verify_code">请输入验证码</string>
  <string name="get_verify_code">获取验证码</string>
  <string name="tv_get_code">重新发送</string>
  <string name="title_activity_login_mvp">Sign in</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!--SQLite-->
  <string name="sqlite_input_inset">请输入要插入的数据</string>
  <string name="sqlite_execute_insert">执行插入</string>
  <string name="sqlite_insert_clear_data">清除</string>
  <string name="sqlite_update_before">请输入更新前的内容</string>
  <string name="sqlite_update_after">请输入更新后的内容</string>
  <string name="sqlite_execute_update">执行更新</string>
  <string name="sqlite_update_clear_data">清除</string>
  <string name="sqlite_input_delete_content">请输入要删除的内容</string>
  <string name="sqlite_execute_delete">执行删除</string>
  <string name="sqlite_delete_clear_data">清除</string>
  <string name="sqlite_query_all">查询所有</string>
  <string name="sqlite_clear_query">清除查询</string>
  <string name="sqlite_hint_view">提示查询内容</string>
</resources>
