<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".user.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y98">

        <ImageView
            android:layout_width="@dimen/x21"
            android:layout_height="@dimen/x21"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/y40" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x36"
        android:layout_marginTop="@dimen/y10"
        android:text="SIGN IN"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x36"
        android:layout_marginTop="@dimen/y7"
        android:text="@string/login"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y84"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x39"
        android:paddingRight="@dimen/x37">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y32"
            android:background="@null"
            android:hint="@string/please_input_mobile"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="14sp"
            tools:text="134" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y24"
            android:background="@color/colorUnClick" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y50"
            android:text="@string/verify_code"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y81"
            android:layout_marginTop="@dimen/y32"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="@dimen/x12">

                <EditText
                    android:id="@+id/et_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/please_input_verify_code"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/view_code_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorUnClick" />
            </LinearLayout>


            <Button
                android:id="@+id/bt_verify_code"
                android:layout_width="@dimen/x200"
                android:layout_height="match_parent"
                android:background="@drawable/rect_unclick_3"
                android:text="@string/get_verify_code"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="@dimen/x675"
        android:layout_height="@dimen/y92"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y50"
        android:background="@drawable/rect_unclick_3"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

  <LinearLayout
      android:layout_width="match_parent" android:layout_height="wrap_content"
      android:orientation="horizontal" android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp">
    <Button android:id="@+id/btn_retrofit_rxjava"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="Retrofit_RxJava"/>
    <Button android:id="@+id/btn_event_bus"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="EventBus"/>
  </LinearLayout>
</LinearLayout>